objects/DRDW_Project__c.object
<CustomObject>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_End_Date__c</fullName>
        <label>Anticipated End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_Start_Date__c</fullName>
        <label>Anticipated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Medical Affairs</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Market Access</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Commercial Operations</fullName>
                </value>
                <value>
                    <fullName>CMC</fullName>
                </value>
                <value>
                    <fullName>Legal &amp; Compliance</fullName>
                </value>
                <value>
                    <fullName>Regulatory</fullName>
                </value>
                <value>
                    <fullName>Corporate Finance</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                    <isActive>false</isActive>
                    <label>Corporate</label>
                </value>
                <value>
                    <fullName>Finance</fullName>
                    <isActive>false</isActive>
                    <label>Finance</label>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                    <isActive>false</isActive>
                    <label>Manufacturing</label>
                </value>
                <value>
                    <fullName>R&amp;D</fullName>
                    <isActive>false</isActive>
                    <label>R&amp;D</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Function</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Market Access</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Corporate Affairs/Policy</fullName>
                </value>
                <value>
                    <fullName>Medical Affairs</fullName>
                </value>
                <value>
                    <fullName>Enabling Functions</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales Operations Commercial</fullName>
                    <label>Sales Operations/Commercial</label>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Meetings</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Business Intelligence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conducted_with_a_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conducted with a Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>EU Corp</fullName>
                </value>
                <value>
                    <fullName>UK&amp;I</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Iberia</fullName>
                </value>
                <value>
                    <fullName>Alpine</fullName>
                </value>
                <value>
                    <fullName>Nordics</fullName>
                </value>
                <value>
                    <fullName>Benelux</fullName>
                </value>
                <value>
                    <fullName>RoW</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRDW_Progress_Complete__c</fullName>
        <label>% Progress Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Date_Active__c</fullName>
        <label>Date Active</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Cancelled__c</fullName>
        <label>Date Cancelled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delayed_Activities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delayed Activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Region</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Geography 1</fullName>
                    <label>US</label>
                </value>
                <value>
                    <fullName>Geography 2</fullName>
                    <label>International</label>
                </value>
                <value>
                    <fullName>Geography 3</fullName>
                    <label>Global</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indication__c</fullName>
        <label>Indication</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Indication 1</fullName>
                    <default>true</default>
                    <label>Indication 1</label>
                </value>
                <value>
                    <fullName>Indication 2</fullName>
                </value>
                <value>
                    <fullName>Indication 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Molecule__c</fullName>
        <label>Project involve internal compound?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Molecule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Molecule</label>
        <referenceTo>Molecule__c</referenceTo>
        <relationshipName>DRDW_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Partner_Y__c</fullName>
        <formula>IF(Conducted_with_a_Partner__c = TRUE,&quot;True&quot;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                    <default>true</default>
                    <label>Pending Approval</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                    <isActive>false</isActive>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                    <isActive>false</isActive>
                    <label>Cancelled</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <isActive>false</isActive>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                    <isActive>false</isActive>
                    <label>On Hold</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Therapeutic_Area__c</fullName>
        <label>Therapeutic Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Autoimmune Diseases</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Endocrinology</fullName>
                </value>
                <value>
                    <fullName>Gastroenterology</fullName>
                </value>
                <value>
                    <fullName>Gynecology</fullName>
                </value>
                <value>
                    <fullName>Immunology</fullName>
                </value>
                <value>
                    <fullName>Neurology</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Psychiatry and Pain</fullName>
                </value>
                <value>
                    <fullName>Rheumatology</fullName>
                </value>
                <value>
                    <fullName>Urology</fullName>
                </value>
                <value>
                    <fullName>Vaccines</fullName>
                </value>
                <value>
                    <fullName>Non-Therapeutic Area Specific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Strategic Imperative</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Therapeutic_Area__c</columns>
        <columns>Status__c</columns>
        <columns>Delayed_Activities__c</columns>
        <columns>Indication__c</columns>
        <columns>Classification__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Geography__c</columns>
        <columns>Conducted_with_a_Partner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DRDW_Projects</fullName>
        <columns>NAME</columns>
        <columns>Geography__c</columns>
        <columns>Delayed_Activities__c</columns>
        <columns>DRDW_Progress_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <label>Strategic Imperatives List</label>
    </listViews>
    <nameField>
        <label>Strategic Imperative Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategic Imperatives  (SI)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Actual_Date_Check</fullName>
        <active>true</active>
        <errorConditionFormula>Actual_End_Date__c  &gt;  Actual_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Actual_End_Date__c</errorDisplayField>
        <errorMessage>Actual End Date needs to be after Actual Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Anticipated_Date_Check</fullName>
        <active>true</active>
        <errorConditionFormula>Anticipated_End_Date__c  &gt;  Anticipated_End_Date__c</errorConditionFormula>
        <errorDisplayField>Actual_End_Date__c</errorDisplayField>
        <errorMessage>Anticipated End Date has to be after Anticipated End Date</errorMessage>
    </validationRules>
</CustomObject>